language/move-lang/tests/move_check/typing/constraints_not_satisfied_type_arguments_internal_pack.exp
error: 

   ┌── tests/move_check/typing/constraints_not_satisfied_type_arguments_internal_pack.move:3:5 ───
   │
 3 │     resource struct R {}
   │     -------- Is found to be a non-copyable type here
   ·
 8 │         Box<CupC<R>>{};
   │         -------------- The type: '0x8675309::M::Box<0x8675309::M::CupC<0x8675309::M::R>>'
   │         ^^^^^^^^^^^^^^ Cannot ignore resource values. The value must be used
   │

error: 

   ┌── tests/move_check/typing/constraints_not_satisfied_type_arguments_internal_pack.move:2:20 ───
   │
 2 │     struct CupC<T: copyable> {}
   │                    -------- 'copyable' constraint declared here
 3 │     resource struct R {}
   │     -------- The type's constraint information was determined here
   ·
 8 │         Box<CupC<R>>{};
   │             ^^^^^^^ Constraint not satisfied.
   │                  - The resource type '0x8675309::M::R' does not satisfy the constraint 'copyable'
   │

error: 

   ┌── tests/move_check/typing/constraints_not_satisfied_type_arguments_internal_pack.move:3:5 ───
   │
 3 │     resource struct R {}
   │     -------- Is found to be a non-copyable type here
   ·
 9 │         Box<R>{};
   │         -------- The type: '0x8675309::M::Box<0x8675309::M::R>'
   │         ^^^^^^^^ Cannot ignore resource values. The value must be used
   │

